# libvldmail

./: CMakeLists.txt  README.md
src/: vldmail.h
